--- a/vue_blocks/vue_air_media_block/template.html
+++ b/vue_blocks/vue_air_media_block/template.html
@@ -16,9 +16,14 @@
 				<p>&nbsp;</p>
 				<p><strong>The "Air Media" application will download start in <span id="counter">{{ time }}</span> seconds.</strong></p>
 				<p v-if="force"><a :href="url">Click here</a> if the download is not started yet.</p>
-			</div>			
-			<div class="smallText" v-if="!manual">
-				<p>If you want to download any version manually, <a href="" @click="manualDownload()">click here</a></p>
+			</div>
+			<div v-else-if="(iOs || andriod || chromeOs)">
+				<h3>You are using {{ os }} system</h3>
+				<p>&nbsp;</p>
+				<p><strong>Please wait, you will be redirected to a page to download the app.</strong></p>
+			</div>
+			<div v-if="!(iOs || andriod || chromeOs)" class="smallText" v-if="!manual">
+				<p>If you want to download any version manually, <a href="#" @click="manualDownload()">click here</a></p>
 			</div>
 			<div v-else>
 				<h4>Choose a Version</h4>
