--- a/vue_blocks/vue_air_media_block/template.html
+++ b/vue_blocks/vue_air_media_block/template.html
@@ -110,7 +110,7 @@
 							</ol>
 							<li>Ignore the <strong>“To enable non-AirPlay audio”</strong> message. You can check to box to stop showing the message.</li>
 						</ol>
-						<li>Use the <strong>AirPlay</strong> <img class="custom-icon" src="https://www.bftv.ucdavis.edu/sites/g/files/dgvnsk1346/files/inline-images/airplay.png" /> icon on the top Menu Bar of your Mac after launching the app to select display.</li>
+						<li>Use the <strong>AirPlay</strong> <img class="custom-icon" src="/sites/g/files/dgvnsk1346/files/inline-images/airplay.png" /> icon on the top Menu Bar of your Mac after launching the app to select display.</li>
 						<ol type="a">
 							<li>If you do not see the icon, go to <strong>System Preferences > Displays > AirPlay Displays:</strong></li>
 							<li>Check the box for <strong>“Show mirroring options in the menu bar when available”</strong> to see it on your menu bar in the future.</li>
