Updated text "on-screen code" to "4-digit code"
 Changed text for "on-screen code" to "4-digit code displayed on the projector screeen"

--- a/vue_blocks/vue_air_media_block/template.html
+++ b/vue_blocks/vue_air_media_block/template.html
@@ -19,7 +19,7 @@
 						<ol type="a">
 							<li>If prompted for a hostname, use <strong>169.237.216.129</strong> and click <strong>Connect</strong></li>
 						</ol>
-						<li>Use the <strong>on-screen code</strong> to <strong>Connect</strong>, then click <strong>Start</strong> when ready to present.</li>
+						<li>Use the <strong>4-digit code</strong> diplayed on the projector screen to <strong>Connect</strong>, then click <strong>Start</strong> when ready to present.</li>
 					</ol>
 					<p>&nbsp;</p>
 					<p><strong>For support, please contact <a href="mailto:bftvtech@ucdavis.edu">bftvtech@ucdavis.edu</a> for quickest response.</strong></p>
@@ -56,7 +56,7 @@
 							<li>Check the box for <strong>“Show mirroring options in the menu bar when available”</strong> to see it on your menu bar in the future.</li>
 							<li>If prompted for a hostname, use <strong>169.237.216.129</strong> and click <strong>Connect</strong></li>
 						</ol>
-						<li>Use the <strong>on-screen code</strong> to Connect, then click Start when ready to present.</li>
+						<li>Use the <strong>4-digit code</strong> diplayed on the projector screen to Connect, then click Start when ready to present.</li>
 					</ol>
 					<p>&nbsp;</p>
 					<p><strong>For support, please contact <a href="mailto:bftvtech@ucdavis.edu">bftvtech@ucdavis.edu</a> for quickest response.</strong></p>
@@ -90,7 +90,7 @@
 						<ol type="a">
 							<li>If prompted for a hostname, use <strong>169.237.216.129</strong> and click <strong>Connect</strong></li>
 						</ol>
-						<li>Use the <strong>on-screen code</strong> to <strong>Connect</strong>, then click <strong>Start</strong> when ready to present.</li>
+						<li>Use the <strong>4-digit code</strong> diplayed on the projector screen to <strong>Connect</strong>, then click <strong>Start</strong> when ready to present.</li>
 					</ol>					
 				</div>
 				<div class="instruction">
@@ -116,7 +116,7 @@
 							<li>Check the box for <strong>“Show mirroring options in the menu bar when available”</strong> to see it on your menu bar in the future.</li>
 							<li>If prompted for a hostname, use <strong>169.237.216.129</strong> and click <strong>Connect</strong></li>
 						</ol>
-						<li>Use the <strong>on-screen code</strong> to Connect, then click Start when ready to present.</li>
+						<li>Use the <strong>4-digit code</strong> diplayed on the projector screen to Connect, then click Start when ready to present.</li>
 					</ol>
 					<p>&nbsp;</p>
 					<p><strong>For support, please contact <a href="mailto:bftvtech@ucdavis.edu">bftvtech@ucdavis.edu</a> for quickest response.</strong></p>
