--- a/vue_blocks/vue_air_media_block/template.html
+++ b/vue_blocks/vue_air_media_block/template.html
@@ -14,14 +14,19 @@
 				</div>
 				<div class="instruction">
 					<h4>Connection instructions for Windows</h4>
-					<ol>
-						<li>Once the file is downloaded, open it, and then launch the program.</li>
-						<ol type="a">
-							<li>If prompted for a hostname, use <strong>169.237.216.129</strong> and click <strong>Connect</strong></li>
+					<div class="float-left">
+						<ol>
+							<li>Once the file is downloaded, open it, and then launch the program.</li>
+							<ol type="a">
+								<li>If prompted for a hostname, use <strong>169.237.216.129</strong> and click <strong>Connect</strong></li>
+							</ol>
+							<li>Use the <strong>4-digit code</strong> diplayed on the projector screen to <strong>Connect</strong>, then click <strong>Start</strong> when ready to present.</li>
 						</ol>
-						<li>Use the <strong>4-digit code</strong> diplayed on the projector screen to <strong>Connect</strong>, then click <strong>Start</strong> when ready to present.</li>
-					</ol>
-					<p>&nbsp;</p>
+					</div>
+					<div>
+						<button type="button" class="btn btn-help" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/1207-av-support','1000','550','yes')"><i class="far fa-question-circle"></i> Get Help</button>
+					</div>
+					<p class="clear-both">&nbsp;</p>
 					<p><strong>For support, please contact <a href="mailto:bftvtech@ucdavis.edu">bftvtech@ucdavis.edu</a> for quickest response.</strong></p>
 					<p>Including the room number in subject line will help expedite the response. If we are not on-site, we can call if you leave us a contact number. You may also email us if instructions are unclear, we appreciate the feedback.</p>
 				</div>
@@ -41,6 +46,9 @@
 							<li>If prompted, <strong>Allow</strong> “bftv.ucdavis.edu” to download to your system.</li>
 						</ol>
 						<li>Go to the downloaded file, run it, and then open <strong>Launch Crestron AirMedia</strong>.</li>
+						<div style="float: right;">
+							<button type="button" class="btn btn-help btn-mac" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/1207-av-support','1000','550','yes')"><i class="far fa-question-circle"></i> Get Help</button>
+						</div>
 						<ol type="a">
 							<li>If you get a <strong>“can’t be opened”</strong> error, without the Open option:</li>
 							<ol type="i">
@@ -58,7 +66,7 @@
 						</ol>
 						<li>Use the <strong>4-digit code</strong> diplayed on the projector screen to Connect, then click Start when ready to present.</li>
 					</ol>
-					<p>&nbsp;</p>
+					<p class="clear-both">&nbsp;</p>
 					<p><strong>For support, please contact <a href="mailto:bftvtech@ucdavis.edu">bftvtech@ucdavis.edu</a> for quickest response.</strong></p>
 					<p>Including the room number in subject line will help expedite the response. If we are not on-site, we can call if you leave us a contact number. You may also email us if instructions are unclear, we appreciate the feedback.</p>
 				</div>
