--- a/vue_blocks/vue_air_media_block/template.html
+++ b/vue_blocks/vue_air_media_block/template.html
@@ -157,4 +157,45 @@
 .manual-download {
 	text-align: left;
 }
+.float-left {
+	float: left;
+}
+.clear-both {
+	clear: both;
+}
+.btn {
+	display: inline-block;
+	font-weight: 400;
+	text-align: center;
+	vertical-align: middle;
+	user-select: none;
+	padding: .375rem .75rem;
+	font-size: 1rem;
+	line-height: 1.5;
+	border-radius: .25rem;
+	transition: color .15s;
+}
+.btn-help {
+	cursor: pointer;
+	background-color: #f15b24;
+	border: 0;
+	color: #fff;
+	margin-left: 2rem;
+	margin-top: 2rem;
+	font-size: 1.7rem;
+	font-weight: 700;
+}
+.btn-mac {
+	margin-left: 0;
+	margin-right: 1rem;
+	margin-top: 0;
+}
+.btn-help:hover {
+	color: #fff;
+	background-color: #da7a57;
+	border-color: #0062cc;
+}
+.btn-help:focus {
+	background-color: #f15b24;
+}
 </style>
