--- a/vue_blocks/vue_sharelink_2209_block/template.html
+++ b/vue_blocks/vue_sharelink_2209_block/template.html
@@ -24,7 +24,7 @@
 						</ol>
 					</div>
 					<div>
-						<button type="button" class="btn btn-help" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/2209-av-support','1000','550','yes')"><i class="far fa-question-circle"></i> Contact Support</button>
+						<button type="button" class="btn btn-help" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/2209-av-support','1000','550','yes')"><i class="far fa-life-ring"></i> Contact Support</button>
 					</div>
 					<p class="clear-both">&nbsp;</p>
 					<p><strong>For support, please contact <a href="mailto:bftvtech@ucdavis.edu">bftvtech@ucdavis.edu</a> for quickest response.</strong></p>
@@ -43,7 +43,7 @@
 					<ol>
 						<li>The download starts automatically, if not, click the above link to start the download.</li>
 						<div style="float: right;">
-							<button type="button" class="btn btn-help btn-mac" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/1207-av-support','1000','550','yes')"><i class="far fa-question-circle"></i> Contact Support</button>
+							<button type="button" class="btn btn-help btn-mac" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/2209-av-support','1000','550','yes')"><i class="far fa-life-ring"></i> Contact Support</button>
 						</div>
 						<ol type="a">
 							<li>If prompted, <strong>Allow</strong> “bftv.ucdavis.edu” to download to your system.</li>
@@ -56,6 +56,7 @@
 								<li>Right-click (tap with two fingers or use <strong>control + click</strong>) on program to bring up a menu, then select <strong>Open</strong>.</li>
 								<li>You should get same message, expect now you can select <strong>Open</strong> to continue.</li>
 							</ol>							
+							<li>If prompted for a hostname, use <strong>169.237.216.130</strong> and click <strong>Connect</strong></li>
 						</ol>
 						<li>Enter the <strong>4-digit code</strong> from the screen</li>
 						<li>If this is the first time you are launching the application:</li>
@@ -119,7 +120,8 @@
 								<li>Click <strong>OK</strong>.</li>
 								<li>Right-click (tap with two fingers or use <strong>control + click</strong>) on program to bring up a menu, then select <strong>Open</strong>.</li>
 								<li>You should get same message, expect now you can select <strong>Open</strong> to continue.</li>
-							</ol>							
+							</ol>
+								<li>If prompted for a hostname, use <strong>169.237.216.130</strong> and click <strong>Connect</strong></li>							
 						</ol>
 						<li>Enter the <strong>4-digit code</strong> from the screen</li>
 						<li>If this is the first time you are launching the application:</li>
