--- a/vue_blocks/vue_air_media_block/template.html
+++ b/vue_blocks/vue_air_media_block/template.html
@@ -24,7 +24,7 @@
 						</ol>
 					</div>
 					<div>
-						<button type="button" class="btn btn-help" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/1207-av-support','1000','550','yes')"><i class="far fa-question-circle"></i> Get Help</button>
+						<button type="button" class="btn btn-help" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/1207-av-support','1000','550','yes')"><i class="far fa-life-ring"></i> Contact Support</button>
 					</div>
 					<p class="clear-both">&nbsp;</p>
 					<p><strong>For support, please contact <a href="mailto:bftvtech@ucdavis.edu">bftvtech@ucdavis.edu</a> for quickest response.</strong></p>
@@ -47,7 +47,7 @@
 						</ol>
 						<li>Go to the downloaded file, run it, and then open <strong>Launch Crestron AirMedia</strong>.</li>
 						<div style="float: right;">
-							<button type="button" class="btn btn-help btn-mac" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/1207-av-support','1000','550','yes')"><i class="far fa-question-circle"></i> Get Help</button>
+							<button type="button" class="btn btn-help btn-mac" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/1207-av-support','1000','550','yes')"><i class="far fa-life-ring"></i> Contact Support</button>
 						</div>
 						<ol type="a">
 							<li>If you get a <strong>“can’t be opened”</strong> error, without the Open option:</li>
@@ -57,6 +57,7 @@
 								<li>You should get same message, expect now you can select <strong>Open</strong> to continue.</li>
 							</ol>
 							<li>Ignore the <strong>“To enable non-AirPlay audio”</strong> message. You can check to box to stop showing the message.</li>
+							<li>If prompted for a hostname, use <strong>169.237.216.129</strong> and click <strong>Connect</strong></li>
 						</ol>
 						<li>Use the <strong>AirPlay</strong> <img class="custom-icon" src="https://www.bftv.ucdavis.edu/sites/g/files/dgvnsk1346/files/inline-images/airplay.png" /> icon on the top Menu Bar of your Mac after launching the app to select display.</li>
 						<ol type="a">
@@ -117,6 +118,7 @@
 								<li>You should get same message, expect now you can select <strong>Open</strong> to continue.</li>
 							</ol>
 							<li>Ignore the <strong>“To enable non-AirPlay audio”</strong> message. You can check to box to stop showing the message.</li>
+							<li>If prompted for a hostname, use <strong>169.237.216.129</strong> and click <strong>Connect</strong></li>
 						</ol>
 						<li>Use the <strong>AirPlay</strong> <img class="custom-icon" src="/sites/g/files/dgvnsk1346/files/inline-images/airplay.png" /> icon on the top Menu Bar of your Mac after launching the app to select display.</li>
 						<ol type="a">
