--- a/vue_blocks/vue_air_media_block/template.html
+++ b/vue_blocks/vue_air_media_block/template.html
@@ -86,7 +86,7 @@
 				<p>&nbsp;</p>
 				<ul style="list-style-type: none;">
 					<li><i class="fab fa-windows"></i>  <a href="https://www.bftv.ucdavis.edu/sites/g/files/dgvnsk1346/files/files/page/AirMedia_Windows.zip">AirMedia - Windows</a></li>
-					<li><i class="fab fa-apple"></i>  <a href="https://www.bftv.ucdavis.edu/sites/g/files/dgvnsk1346/files/files/page/AirMedia_Mac.zip">AirMedia - Mac</a></li>				
+					<li><i class="fab fa-apple"></i>  <a href="https://web.bftv.ucdavis.edu/airmedia/1207-RMI-S_AirMedia_169.237.216.129.dmg">AirMedia - Mac</a></li>				
 					<li><i class="fab fa-app-store-ios"></i>  <a href="https://itunes.apple.com/us/app/crestron-airmedia/id685412055">iOS</a></li>
 					<li><i class="fab fa-android"></i>  <a href="https://play.google.com/store/apps/details?id=com.crestron.airmedia&hl=en_US">Android</a></li>				
 					<li><i class="fab fa-chrome"></i>  <a href="https://chrome.google.com/webstore/detail/airmedia-sender/ljophmlbljnjodcbogmdogcpclifenpk">ChromeOS</a></li>
