--- a/vue_blocks/vue_userinfo_block/template.html
+++ b/vue_blocks/vue_userinfo_block/template.html
@@ -2,7 +2,7 @@
     <router-view></router-view>
 </div>
 
-<template id="cpsite">
+<template id="userinfo">
 	<div v-if="!loading">
 		<div class="userinfo-wrap">			
 			<iframe id="userinfo-frame" ref="userinfoframe" frameborder="0" style="width: 100%;" :src="iframesrc" :height="height" width="100%"></iframe>
