--- a/vue_blocks/vue_sharelink_2211_block/template.html
+++ b/vue_blocks/vue_sharelink_2211_block/template.html
@@ -89,8 +89,8 @@
 				<a style="float:right;" href="#" @click="manualDownloadOff()"><-- Go back</a>
 				<p>&nbsp;</p>
 				<ul style="list-style-type: none;">
-					<li><i class="fab fa-windows"></i>  <a href="https://www.bftv.ucdavis.edu/sites/g/files/dgvnsk1346/files/files/page/ShareLink_2211_Windows.zip">ShareLink Extron - Windows</a></li>
-					<li><i class="fab fa-apple"></i>  <a href="https://www.bftv.ucdavis.edu/sites/g/files/dgvnsk1346/files/files/page/ShareLink_2211_Mac.zip">ShareLink Extron - Mac</a></li>				
+					<li><i class="fab fa-windows"></i>  <a href="https://web.bftv.ucdavis.edu/airmedia/ShareLink_2211_.169.237.216.131.exe">ShareLink Extron - Windows</a></li>
+					<li><i class="fab fa-apple"></i>  <a href="https://web.bftv.ucdavis.edu/airmedia/ShareLink_2211_.169.237.216.131.dmg">ShareLink Extron - Mac</a></li>				
 					<li><i class="fab fa-app-store-ios"></i>  <a href="https://apps.apple.com/us/app/mirrorop-for-extron-sharelink/id959814935">iOS</a></li>
 					<li><i class="fab fa-android"></i>  <a href="https://play.google.com/store/apps/details?id=com.extron.sharelink&hl=en">Android</a></li>				
 					<li><i class="fab fa-chrome"></i>  <a href="https://play.google.com/store/apps/details?id=com.extron.sharelink&hl=en">ChromeOS</a></li>
