AirMedia block color changes

--- a/vue_blocks/vue_air_media_block/template.html
+++ b/vue_blocks/vue_air_media_block/template.html
@@ -10,7 +10,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12 text-right mb-4">
-							<button type="button" class="btn btn-warning btn-lg" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/av-support?room=1207%20RMI%20South','1000','550','yes')"><i class="fas fa-headset"></i>&nbsp;Contact Support</button>
+							<button type="button" class="btn btn-warning btn-lg" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/av-support?room=1207RMISouth','1000','550','yes')"><i class="fas fa-headset"></i>&nbsp;Contact Support</button>
 						</div>
 						<div class="col-md-6">
 							<div class="img-div">
@@ -35,7 +35,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12"><a href="#" @click="backToSplash()"><i class="fas fa-arrow-left"></i>&nbsp;Go Back</a></div>
-						<div class="col-md-12 text-right"><a class="btn btn-primary btn-lg" :href="url"><i class="fas fa-download"></i>&nbsp;Download</a> <button type="button" class="btn btn-warning btn-lg" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/av-support?room=1207%20RMI%20South','1000','550','yes')"><i class="fas fa-headset"></i>&nbsp;Contact Support</button></div>
+						<div class="col-md-12 text-right"><a class="btn btn-primary btn-lg" :href="url"><i class="fas fa-download"></i>&nbsp;Download</a> <button type="button" class="btn btn-warning btn-lg" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/av-support?room=1207RMISouth','1000','550','yes')"><i class="fas fa-headset"></i>&nbsp;Contact Support</button></div>
 						<div class="col-md-12">
 							<div v-if="windows">
 								<h3>You are using a Windows system</h3>
@@ -99,7 +99,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12"><a href="#" @click="backToSplash()"><i class="fas fa-arrow-left"></i>&nbsp;Go Back</a></div>
-						<div class="col-md-12 text-right"><button type="button" class="btn btn-warning btn-lg" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/av-support?room=1207%20RMI%20South','1000','550','yes')"><i class="fas fa-headset"></i>&nbsp;Contact Support</button></div>
+						<div class="col-md-12 text-right"><button type="button" class="btn btn-warning btn-lg" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/av-support?room=1207RMISouth','1000','550','yes')"><i class="fas fa-headset"></i>&nbsp;Contact Support</button></div>
 						<div class="col-md-12">
 						<h2>DTEN Zoom Room Quick Start Guide</h2>
 						<h3>Before You Begin</h3>
@@ -205,7 +205,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12"><a href="#" @click="airMediaIns()"><i class="fas fa-arrow-left"></i>&nbsp;Go Back</a></div>
-						<div class="col-md-12 text-right"><button type="button" class="btn btn-warning btn-lg" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/av-support?room=1207%20RMI%20South','1000','550','yes')"><i class="fas fa-headset"></i>&nbsp;Contact Support</button></div>
+						<div class="col-md-12 text-right"><button type="button" class="btn btn-warning btn-lg" onclick="centeredPopup('https://www.bftv.ucdavis.edu/form/av-support?room=1207RMISouth','1000','550','yes')"><i class="fas fa-headset"></i>&nbsp;Contact Support</button></div>
 						<div class="col-md-12">
 							<h4>Choose a Version</h4>				
 							<p>&nbsp;</p>
@@ -323,17 +323,17 @@
 }
 .btn-warning {
 	color: #fff !important;
-	background-color: #f15b24 !important;
+	background-color: #F18A00 !important;
 }
 .btn-warning:hover { 
-	background-color: #da7a57 !important;
+	background-color: #FFDC00 !important;
 }
 .btn-primary {
 	color: #fff !important;
-	background-color: #14447a !important;
+	background-color: #003A5D !important;
 }
 .btn-primary:hover {
-	background-color: #3c70ab !important;
+	background-color: #008EAA !important;
 }
 img {
 	display: block;
